src/test/ui/issues/issue-18532.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-18532.rs:6:5
   |
LL |     (return)((),());
   |     ^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
